Freedom Sanbox Ant Deploy/src/objects/Lead_Team_Member_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Team_Member_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocation_Date__c</fullName>
        <label>Allocation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <formula>Team_Member__r.Department__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Team Member Allocations</relationshipLabel>
        <relationshipName>Lead_Team_Member_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Lead Team Member Allocations</relationshipLabel>
        <relationshipName>Lead_Team_Member_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lead Team Member Allocation</label>
    <nameField>
        <label>Lead Team Member Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Team Member Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>